--- a/front-end/webapp/src/index.html
+++ b/front-end/webapp/src/index.html
@@ -9,6 +9,8 @@
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+rel="stylesheet" />
 	<link rel="manifest" href="manifest.webmanifest">
 	<meta name="theme-color" content="#1976d2">
 </head>
