tg-352 favicon, header y nombre de webapp y backoffice

--- a/front-end/webapp/src/index.html
+++ b/front-end/webapp/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Sistema de Gestión Hospitalaria</title>
+	<title>Historia de salud integrada</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
