tg-2233 Corrijo identación

--- a/front-end/webapp/src/index.html
+++ b/front-end/webapp/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title></title>
 	<base href="/">
+	<meta name="description" content="Sistema de Gestion de Hospitales">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="assets/icons/favicon/apple-icon-57x57.png">
@@ -24,6 +25,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="assets/icons/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+	<meta name="google" value="notranslate">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
