--- a/front-end/webapp/src/index.html
+++ b/front-end/webapp/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title></title>
 	<base href="/">
-	<meta name="description" content="Sistema de Gestion de Hospitales">
+	<meta name="description" content="Historia de salud integrada">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="manifest" href="manifest.webmanifest">
