--- a/back-end/interoperability/src/main/resources/narratives/medicationstatement.html
+++ b/back-end/interoperability/src/main/resources/narratives/medicationstatement.html
@@ -24,7 +24,9 @@
                 <th:block th:if="${not resource.dosage.empty} and ${not resource.dosage[0].doseAndRate.empty}" th:text="${resource.dosage[0].doseAndRate[0].dose.value}"></th:block>
             </td>
             <td>
-                <th:block th:if="${not resource.dosage.empty} and ${not resource.dosage[0].route.coding.empty}" th:narrative="${resource.dosage[0].route}"></th:block>
+                <th:block th:if="${not resource.dosage.empty} and ${not resource.dosage[0].route.coding.empty}">
+                    <th:block th:narrative="${resource.dosage[0].route}"></th:block>
+                </th:block>
             </td>
             <td><th:block th:if="${not resource.statusElement.empty}" th:text="${resource.statusElement.value}"></th:block></td>
             <td th:if="${resource.effectivePeriod != null}" th:text="${resource.effectivePeriod.start}"></td>
