tg-3347 [Interoperabilidad] Resuelve issues reportados por SonarLint

--- a/back-end/interoperability/src/main/resources/narratives/allergyintolerance.html
+++ b/back-end/interoperability/src/main/resources/narratives/allergyintolerance.html
@@ -1,15 +1,14 @@
 <div xmlns="http://www.w3.org/1999/xhtml">
     <table>
-        <thead>
+        <caption>Resumen de Alergias e intolerancias</caption>
         <tr>
-            <td>Descripción</td>
-            <td>Tipo</td>
-            <td>Categoría</td>
-            <td>Criticalidad</td>
-            <td>Fecha</td>
-            <td>Reacción</td>
+            <th scope="col">Descripción</th>
+            <th scope="col">Tipo</th>
+            <th scope="col">Categoría</th>
+            <th scope="col">Criticalidad</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Reacción</th>
         </tr>
-        </thead>
         <tbody>
         <tr>
             <td th:narrative="${resource.code}"></td>
