--- a/back-end/interoperability/src/main/resources/narratives/medicationstatement.html
+++ b/back-end/interoperability/src/main/resources/narratives/medicationstatement.html
@@ -1,15 +1,14 @@
 <div xmlns="http://www.w3.org/1999/xhtml">
     <table>
-        <thead>
+        <caption>Resumen de Medicamentos</caption>
         <tr>
-            <td>Medicación</td>
-            <td>Forma</td>
-            <td>Dosis</td>
-            <td>Ruta</td>
-            <td>Estado</td>
-            <td>Periodo</td>
+            <th scope="col">Medicación</th>
+            <th scope="col">Forma</th>
+            <th scope="col">Dosis</th>
+            <th scope="col">Ruta</th>
+            <th scope="col">Estado</th>
+            <th scope="col">Periodo</th>
         </tr>
-        </thead>
         <tbody>
         <tr>
             <td>
