--- a/front-end/apps/projects/hospital/src/index.html
+++ b/front-end/apps/projects/hospital/src/index.html
@@ -13,7 +13,7 @@
 	<link rel="apple-touch-icon" href="./assets/custom/icons/icon-192x192.png">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet" />
 </head>
