tg-5108 Documentación de estructura

--- a/front-end/apps/projects/hospital/src/index.html
+++ b/front-end/apps/projects/hospital/src/index.html
@@ -18,9 +18,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet" />
 </head>
 
-<body>
+<body class="mat-typography mat-app-background">
 	<app-root></app-root>
-	<noscript>Please enable JavaScript to continue using this application.</noscript>
+	<noscript>
+		<img src="assets/custom/app_logo.svg" />
+		<h1>La página que estás viendo requiere para su funcionamiento el uso de JavaScript. Si lo has deshabilitado intencionadamente, por favor vuelve a activarlo.</h1>
+	</noscript>
 </body>
 
 </html>
